@@ -45,10 +45,13 @@ private slots:
     void presenceReceived(const QXmppPresence &presence);
     void removeContact();
     void renameContact();
+    void rosterClick(const QModelIndex &index);
     void rosterMenu(QMenu *menu, const QModelIndex &index);
     void showContactPage();
 
 private:
+    QLabel *tipLabel() const;
+
     Chat *chat;
     QPushButton *addButton;
 };
