@@ -23,6 +23,7 @@ wiLink 0.9.9b (UNRELEASED)
  * Miscellaneous:
    - Add caching on vCards to reduce network traffic at connect.
    - Add support for double and tripple click selections in chat history.
+   - Add a help panel for contacts.
 
 wiLink 0.9.9a (2010-09-16)
  * Do not join bookmarked rooms until we receive our nickname.
